--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == Kickammender
 
-Kickammender is an intelligent recommendation engine for Kickstarter projects, built in Ruby on Rails.
+Kickammender is an intelligent recommendation engine for Kickstarter projects, built with Ruby on Rails.
